added more install instructions

--- a/INSTALL
+++ b/INSTALL
@@ -4,3 +4,10 @@ git clone http://github.com/scikits-image/scikits-image.git
 cd scikits-image/
 sudo python setup.py install
 
+# LIST OF cygwin modules I prefer to use
+ssh
+git
+make
+vim
+more
+less
