--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
 #Updating scikits-image to use template matching
 
-git clone http://github.com/scikits-image/scikits-image.git
-cd scikits-image/
+git clone http://github.com/scikit-image/scikit-image.git
+cd scikit-image/
 sudo python setup.py install
 
 # LIST OF cygwin modules I prefer to use
